# XIFtyPython

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  gallery_ingest.py
scripts/: prepare-runtime.sh  stage-runtime.py
src/xifty/: __init__.py
src/xifty_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_binding.py
