[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xifty-python"
version = "0.1.3"
description = "Python binding for XIFty"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "XIFtySense" }]
keywords = ["metadata", "exif", "xmp", "media", "ffi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/XIFtySense/XIFtyPython"
Repository = "https://github.com/XIFtySense/XIFtyPython"
Issues = "https://github.com/XIFtySense/XIFtyPython/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xifty = [
  "_runtime/manifest.json",
  "_runtime/include/xifty.h",
  "_runtime/lib/*"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
